[coffee-machine] [REFACTOR] Update to Java 14